fixed spacing

--- a/_scss/modules/_image-layout.scss
+++ b/_scss/modules/_image-layout.scss
@@ -75,9 +75,9 @@
 	margin-bottom: 8em;
 }
 
-.image-layout-hdr {
-	padding: 1em 0em;
-}
+// .image-layout-hdr {
+// 	padding: 1em 0em;
+// }
 
 .is-image-grid-content {
 	max-width: 600px;
